<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFEFE"
    android:focusable="true"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="400dp"
        android:layout_height="420dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:contentDescription="@string/main_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_movie_catalogue" />

    <Button
        android:id="@+id/addMoviesButton"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:backgroundTint="#30383A"
        android:focusable="auto"
        android:focusableInTouchMode="false"
        android:text="@string/add_movies_to_database"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/searchMovieButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/searchMovieActorButton"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:backgroundTint="#4E5B60"
        android:focusable="auto"
        android:focusableInTouchMode="false"
        android:text="@string/search_for_actors"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/searchMovieAllButton"
        app:layout_constraintEnd_toEndOf="@+id/searchMovieButton"
        app:layout_constraintStart_toStartOf="@+id/searchMovieButton" />

    <Button
        android:id="@+id/searchMovieAllButton"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="#4E5B60"
        android:focusable="auto"
        android:focusableInTouchMode="false"
        android:text="@string/search_all_movies"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/searchMovieActorButton"
        app:layout_constraintStart_toStartOf="@+id/searchMovieActorButton" />

    <Button
        android:id="@+id/searchMovieButton"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:backgroundTint="#4E5B60"
        android:focusable="auto"
        android:focusableInTouchMode="false"
        android:text="@string/search_for_movies"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/searchMovieActorButton"
        app:layout_constraintEnd_toEndOf="@+id/addMoviesButton"
        app:layout_constraintStart_toStartOf="@+id/addMoviesButton" />

    <TextView
        android:id="@+id/studentIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="38dp"
        android:text="@string/_20200803_w1833667"
        android:textColor="#4E5B60"
        android:textColorHighlight="#4E5B60"
        android:textColorHint="#4E5B60"
        android:textColorLink="#4E5B60"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchMovieAllButton"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>