<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".SearchForMovies">

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="5dp"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="3dp"
            android:paddingTop="5dp"
            android:paddingEnd="3dp"
            android:paddingBottom="10dp"
            android:textColor="#4E5B60"
            android:textSize="16sp"
            android:textStyle="bold" />
    </ScrollView>

    <Button
        android:id="@+id/retrieve"
        android:layout_width="54dp"
        android:layout_height="60dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#F9BC50"
        app:icon="?android:attr/actionModeWebSearchDrawable"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/search"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="2dp"
        android:autofillHints=""
        android:background="@drawable/search_bar"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/enter_the_movie_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toStartOf="@id/retrieve"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/searchPageIcon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/search_page_icon1"
        app:layout_constraintBottom_toBottomOf="@id/ScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/search_for_movies"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/save"
        android:layout_width="181dp"
        android:layout_height="76dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#F9BC50"
        android:text="@string/save_movie_to_database"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ScrollView"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/notFoundView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:textAlignment="center"
        android:textColor="#343D40"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/retrieve"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>